# influxdb-timeseries-webapp

./: .gitignore  README.md  docker-compose.yml
alphavantage_scraper/: .env.template  Dockerfile  pyproject.toml  scraper_stocks.py
dash_app/: .env.template  Dockerfile  dash_server.py  pyproject.toml
influxdb/: .env.template  Dockerfile
